tokParser.java
// Generated from tok.g4 by ANTLR 4.10.1
 
	import java.util.*; 
	import java.util.Scanner.*;
	import java.util.ArrayList;
	import java.util.Stack;
	import java.lang.*;
	import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tokParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, ABREP=12, FECHAP=13, ABRECH=14, FECHACH=15, ARROB=16, 
		VIR=17, OP=18, OPERAR=19, OPERLOG=20, ATTR=21, ID=22, NUMBER=23, TEXTO=24, 
		WS=25;
	public static final int
		RULE_start = 0, RULE_decl = 1, RULE_declaravar = 2, RULE_tipo = 3, RULE_bloco = 4, 
		RULE_cmd = 5, RULE_cmdLeitura = 6, RULE_cmdEscrita = 7, RULE_cmdAtribu = 8, 
		RULE_cmdSelecao = 9, RULE_cmdEnquanto = 10, RULE_cmdFazEnquanto = 11, 
		RULE_expr = 12, RULE_termo = 13, RULE_termo_one = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "decl", "declaravar", "tipo", "bloco", "cmd", "cmdLeitura", 
			"cmdEscrita", "cmdAtribu", "cmdSelecao", "cmdEnquanto", "cmdFazEnquanto", 
			"expr", "termo", "termo_one"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fimprog'", "'numero'", "'texto'", "'float'", "'ler'", 
			"'escreva'", "'se'", "'senao'", "'enquanto'", "'faz'", "'('", "')'", 
			"'{'", "'}'", "'@'", "','", null, null, null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ABREP", "FECHAP", "ABRECH", "FECHACH", "ARROB", "VIR", "OP", "OPERAR", 
			"OPERLOG", "ATTR", "ID", "NUMBER", "TEXTO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tok.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private Number _tipo;
		private String _varName;
		private String _varNameNew;
		private String _newVarName;
		private float _newVarNameFloat;
		private String _varValue;
		private int _New_varValue;
		isSymboTable symbolTable = new isSymboTable();
		private IsSymbol symbol;
		private Expections exception = new Expections();
		private String _varValueVerificad;
		private String _varValueOtherVerificad;
		private Mylanguage program = new Mylanguage();
		private ArrayList<AbastractCommand> currentThread;
		private ArrayList<AbastractCommand> ncurrentThread = new ArrayList<AbastractCommand>();


	    public void exibeComandos() {
	        for (AbastractCommand c: program.getComandos()) {
	            System.out.println(c);
	        }
	    }

		public void generateCode() {
			program.generateTarget();
		}
		
		private String _readId;
		private String _exprID;
		private String _content;
		private Stack<ArrayList<AbastractCommand>> stack = new Stack<ArrayList<AbastractCommand>>();
		private String _exprDecisao;
		private ArrayList<AbastractCommand> listaTrue;
		private ArrayList<AbastractCommand> listaFalse;
		private String _exprEnquanto;
		private ArrayList<AbastractCommand> _exprEnquantoContent;
		private String exprFazEnquanto;
		private ArrayList<AbastractCommand> exprFazEnquantoContent;


	public tokParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			decl();
			setState(32);
			bloco();
			setState(33);
			match(T__1);
			 
						program.setVarTable(symbolTable);	
						program.setComandos(stack.pop());
						generateCode();
						
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public List<DeclaravarContext> declaravar() {
			return getRuleContexts(DeclaravarContext.class);
		}
		public DeclaravarContext declaravar(int i) {
			return getRuleContext(DeclaravarContext.class,i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(36);
					declaravar();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(39); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaravarContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(tokParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tokParser.ID, i);
		}
		public TerminalNode ARROB() { return getToken(tokParser.ARROB, 0); }
		public TerminalNode ATTR() { return getToken(tokParser.ATTR, 0); }
		public List<TerminalNode> VIR() { return getTokens(tokParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(tokParser.VIR, i);
		}
		public TerminalNode TEXTO() { return getToken(tokParser.TEXTO, 0); }
		public TerminalNode NUMBER() { return getToken(tokParser.NUMBER, 0); }
		public DeclaravarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaravar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterDeclaravar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitDeclaravar(this);
		}
	}

	public final DeclaravarContext declaravar() throws RecognitionException {
		DeclaravarContext _localctx = new DeclaravarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaravar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			tipo();
			setState(42);
			match(ID);

									_varName = _input.LT(-1).getText();
									_varValue = null;
									symbol = new IsVariable(_varName, _tipo, _varValue);
									if (!symbolTable.exist(_varName)) {
										symbolTable.add(symbol);
									}else {
										exception.variableExist(_varName);
									}

								
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTR) {
				{
				setState(44);
				match(ATTR);
				setState(45);
				_la = _input.LA(1);
				if ( !(_la==NUMBER || _la==TEXTO) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIR) {
				{
				{
				setState(48);
				match(VIR);
				setState(49);
				match(ID);
					
										_varName = _input.LT(-1).getText();
										_varValue = null;
										symbol = new IsVariable(_varName, _tipo, _varValue);
										if (!symbolTable.exist(_varName)) {
											symbolTable.add(symbol);
										}else {
											exception.variableExist(_varName);
										}
									
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(ARROB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__2);
				 _tipo = IsVariable.NUMBER; 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(T__3);
				 _tipo = IsVariable.TEXT;   
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(T__4);
				 _tipo = IsVariable.FLOAT;  
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

						currentThread = new ArrayList<AbastractCommand>();
						stack.push(currentThread);
					  
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				cmd();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << ID))) != 0) );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdAtribuContext cmdAtribu() {
			return getRuleContext(CmdAtribuContext.class,0);
		}
		public CmdSelecaoContext cmdSelecao() {
			return getRuleContext(CmdSelecaoContext.class,0);
		}
		public CmdEnquantoContext cmdEnquanto() {
			return getRuleContext(CmdEnquantoContext.class,0);
		}
		public CmdFazEnquantoContext cmdFazEnquanto() {
			return getRuleContext(CmdFazEnquantoContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmd);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				cmdLeitura();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				cmdEscrita();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				cmdAtribu();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				cmdSelecao();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				cmdEnquanto();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				cmdFazEnquanto();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode ABREP() { return getToken(tokParser.ABREP, 0); }
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode FECHAP() { return getToken(tokParser.FECHAP, 0); }
		public TerminalNode ARROB() { return getToken(tokParser.ARROB, 0); }
		public DeclaravarContext declaravar() {
			return getRuleContext(DeclaravarContext.class,0);
		}
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterCmdLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitCmdLeitura(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdLeitura);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(T__5);
				setState(81);
				match(ABREP);
				setState(82);
				match(ID);

										_varName = _input.LT(-1).getText();
										if (symbolTable.exist(_varName)) {
											exception.variableExist(_varName);
										}
										_readId = _input.LT(-1).getText();
									
				setState(84);
				match(FECHAP);
				setState(85);
				match(ARROB);

											_tipo = IsVariable.INPUT;
											symbol = new IsVariable(_varName, _tipo, _varValue);
											symbolTable.add(symbol);
											Scanner input = new Scanner(System.in);
											_varValue = input.nextLine();
											symbolTable.setValue(_varName, _varValue);
									

										CommandLeitura cmd = new CommandLeitura(_readId, _newVarName);
										stack.peek().add(cmd);
									
				}
				break;
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				declaravar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode ABREP() { return getToken(tokParser.ABREP, 0); }
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode FECHAP() { return getToken(tokParser.FECHAP, 0); }
		public TerminalNode ARROB() { return getToken(tokParser.ARROB, 0); }
		public DeclaravarContext declaravar() {
			return getRuleContext(DeclaravarContext.class,0);
		}
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterCmdEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitCmdEscrita(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdEscrita);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(T__6);
				setState(92);
				match(ABREP);
				setState(93);
				match(ID);

											_varName = _input.LT(-1).getText();
											if (!symbolTable.exist(_varName)) {
												exception.variableNotExist(_varName);
											}
											_readId = _input.LT(-1).getText();
								       
				setState(95);
				match(FECHAP);
				setState(96);
				match(ARROB);

										symbolTable.getValue(_varName);
									   

										CommandEscrita cmd = new CommandEscrita(_readId);
										stack.peek().add(cmd);
									   
				}
				break;
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				declaravar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAtribuContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode ATTR() { return getToken(tokParser.ATTR, 0); }
		public TerminalNode ARROB() { return getToken(tokParser.ARROB, 0); }
		public TerminalNode TEXTO() { return getToken(tokParser.TEXTO, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclaravarContext declaravar() {
			return getRuleContext(DeclaravarContext.class,0);
		}
		public CmdAtribuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAtribu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).enterCmdAtribu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tokListener ) ((tokListener)listener).exitCmdAtribu(this);
		}
	}

	public final CmdAtribuContext cmdAtribu() throws RecognitionException {
		CmdAtribuContext _localctx = new CmdAtribuContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmdAtribu);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(ID);

								_varName = _input.LT(-1).getText();
								_varValueVerificad = _varName;
								if (!symbolTable.exist(_varName)) {
									exception.variableNotExist(_varName);
								}
								_exprID = _input.LT(-1).getText();
							
				setState(104);
				match(ATTR);
				 _content = ""; 
				setState(109);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXTO:
					{
					setState(106);
					match(TEXTO);
					 _content += _input.LT(-1).getText(); 
					}
					break;
				case ABREP:
				case FECHAP:
				case ID:
				case NUMBER:
					{
					setState(108);
					expr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}

								_varValue = _input.LT(-1).getText();
								_newVarName = symbolTable.getTypes(_varName);
